--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "postcss": "^8.5.3",
     "postcss-cli": "^11.0.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.5.2",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
