--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,8 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.1.5",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.5.0",
     "mongoose": "^8.14.0",
     "reflect-metadata": "^0.2.2",
